--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -32,15 +32,30 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <link href="~/content/my_css.css" rel="stylesheet" />
+
+    <script src="~/scripts/angular.min.js"></script>
+    <script src="~/scripts/my_js/main_app.js"></script>
+
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body class="skin-blue sidebar-collapse">
+<body class="skin-blue sidebar-collapse" ng-app="main_app">
     <div class="wrapper">
 
         @Html.Partial("_header_menu")
         @Html.Partial("_main_sidebar")
 
-        @RenderBody()
+        <div class="content-wrapper row">
+            <div class="content">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                    @RenderBody()
+                </div>
+            </div><!-- /.content-wrapper -->
+            <div class="col-md-1"></div>
+        </div>
 
         @Html.Partial("_footer")
 
@@ -83,5 +98,6 @@
     <script src="../../content/dist/js/pages/dashboard.js" type="text/javascript"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../../content/dist/js/demo.js" type="text/javascript"></script>
+
 </body>
 </html>
