--- a/doma/Views/Shared/_header_menu.cshtml
+++ b/doma/Views/Shared/_header_menu.cshtml
@@ -9,85 +9,34 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-              
-                    <!-- Messages: style can be found in dropdown.less-->
-                    <li class="dropdown messages-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-shopping-cart"></i>
-                            <span class="label label-success">4</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li class="header">You have 4 messages</li>
-                            <li>
-                                <!-- inner menu: contains the actual data -->
-                                <ul class="menu">
-                                    <li>
-                                        <!-- start message -->
-                                        <a href="#">
-                                            <div class="pull-left">
-                                                <img src="../../content/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
-                                            </div>
-                                            <h4>
-                                                Support Team
-                                                <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                                            </h4>
-                                            <p>Why not buy a new awesome theme?</p>
-                                        </a>
-                                    </li><!-- end message -->
-                                    <li>
-                                        <a href="#">
-                                            <div class="pull-left">
-                                                <img src="../../content/dist/img/user3-128x128.jpg" class="img-circle" alt="user image" />
-                                            </div>
-                                            <h4>
-                                                AdminLTE Design Team
-                                                <small><i class="fa fa-clock-o"></i> 2 hours</small>
-                                            </h4>
-                                            <p>Why not buy a new awesome theme?</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="pull-left">
-                                                <img src="../../content/dist/img/user4-128x128.jpg" class="img-circle" alt="user image" />
-                                            </div>
-                                            <h4>
-                                                Developers
-                                                <small><i class="fa fa-clock-o"></i> Today</small>
-                                            </h4>
-                                            <p>Why not buy a new awesome theme?</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="pull-left">
-                                                <img src="../../content/dist/img/user3-128x128.jpg" class="img-circle" alt="user image" />
-                                            </div>
-                                            <h4>
-                                                Sales Department
-                                                <small><i class="fa fa-clock-o"></i> Yesterday</small>
-                                            </h4>
-                                            <p>Why not buy a new awesome theme?</p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="pull-left">
-                                                <img src="../../content/dist/img/user4-128x128.jpg" class="img-circle" alt="user image" />
-                                            </div>
-                                            <h4>
-                                                Reviewers
-                                                <small><i class="fa fa-clock-o"></i> 2 days</small>
-                                            </h4>
-                                            <p>Why not buy a new awesome theme?</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="footer"><a href="#">See All Messages</a></li>
-                        </ul>
-                    </li>
-             
+                <!-- Messages: style can be found in dropdown.less-->
+                <li class="dropdown messages-menu" ng-controller="cart_controller as controller">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click="init()">
+                        <i class="fa fa-shopping-cart"></i>
+                        <span class="label label-success">{{products.length}}</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="header">Giỏ hàng có {{products.length}} sản phẩm</li>
+                        <li>
+                            <!-- inner menu: contains the actual data -->
+                            <ul class="menu">
+                                <li ng-repeat="item in products">
+                                    <a>
+                                        <div class="pull-left">
+                                            <img src="../../content/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+                                        </div>
+                                        <h4>
+                                            {{item.name}}
+                                        </h4>
+                                        <p>Số lượng: {{item.number}}</p>
+                                    </a>
+                                </li><!-- end message -->                               
+                            </ul>
+                        </li>
+                        <li class="footer"><a href="#">Thanh toán</a></li>
+                    </ul>
+                </li>
+
                 <!-- User Account: style can be found in dropdown.less -->
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
