--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -35,8 +35,9 @@
     <link href="~/content/my_css.css" rel="stylesheet" />
 
     <script src="~/scripts/angular.min.js"></script>
+    <script src="~/scripts/angular-cookies.min.js"></script>
     <script src="~/scripts/my_js/main_app.js"></script>
-
+    <script src="~/scripts/my_js/home_index_controller.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -52,6 +53,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
                     @RenderBody()
+                    @Html.Partial("_gio_hang_modal")
                 </div>
             </div><!-- /.content-wrapper -->
             <div class="col-md-1"></div>
@@ -99,5 +101,6 @@
     <!-- AdminLTE for demo purposes -->
     <script src="../../content/dist/js/demo.js" type="text/javascript"></script>
 
+    @RenderSection("Scripts", false)
 </body>
 </html>
