--- a/doma/Views/Cart/Index.cshtml
+++ b/doma/Views/Cart/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Giỏ hàng";
 }
 <script src="~/scripts/my_js/cart_index_controller.js"></script>
 
