--- a/doma/Views/Shared/_Layout.cshtml
+++ b/doma/Views/Shared/_Layout.cshtml
@@ -1,8 +1,15 @@
 ﻿<html>
 <head>
     <meta charset="UTF-8">
-    <title>AdminLTE 2 | Dashboard</title>
+    <title>@ViewBag.Title</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <!-- jQuery 2.1.3 -->
+    <script src="../../content/plugins/jQuery/jQuery-2.1.3.min.js"></script>
+    <!-- jQuery UI 1.11.2 -->
+    <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <!-- Bootstrap 3.3.2 JS -->
+    <script src="../../content/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- Bootstrap 3.3.2 -->
     <link href="../../content/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- FontAwesome 4.3.0 -->
@@ -41,12 +48,13 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+  
+
 </head>
 <body class="skin-blue sidebar-collapse" ng-app="main_app">
     <div class="wrapper">
 
         @Html.Partial("_header_menu")
-        @Html.Partial("_main_sidebar")
 
         <div class="content-wrapper row">
             <div class="content">
@@ -62,16 +70,11 @@
         @Html.Partial("_footer")
 
     </div><!-- ./wrapper -->
-    <!-- jQuery 2.1.3 -->
-    <script src="../../content/plugins/jQuery/jQuery-2.1.3.min.js"></script>
-    <!-- jQuery UI 1.11.2 -->
-    <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+   
+    
     <script>
         $.widget.bridge('uibutton', $.ui.button);
     </script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="../../content/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- Morris.js charts -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <script src="../../content/plugins/morris/morris.min.js" type="text/javascript"></script>
@@ -100,7 +103,8 @@
     <script src="../../content/dist/js/pages/dashboard.js" type="text/javascript"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../../content/dist/js/demo.js" type="text/javascript"></script>
-
+    <link href="~/content/bootstrap/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+    <script src="~/content/bootstrap/js/bootstrap-datetimepicker.min.js"></script>
     @RenderSection("Scripts", false)
 </body>
 </html>
