--- a/doma/Views/Shared/_header_menu.cshtml
+++ b/doma/Views/Shared/_header_menu.cshtml
@@ -1,12 +1,20 @@
-﻿<header class="main-header">
+﻿@using Microsoft.AspNet.Identity
+@{
+    doma.Models.AspNetUser user = null;
+    if (Request.IsAuthenticated)
+    {
+        doma.Models.ProjectDMEntities db = new doma.Models.ProjectDMEntities();
+        string userid = User.Identity.GetUserId();
+        user = db.AspNetUsers.SingleOrDefault(t => t.Id == userid);
+    }
+}
+<header class="main-header">
     <!-- Logo -->
     <a href="../../Home" class="logo"><b>Admin</b>LTE</a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
-        <!-- Sidebar toggle button-->
-        <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
-        </a>
+        
+
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
                 <!-- Messages: style can be found in dropdown.less-->
@@ -30,53 +38,83 @@
                                         </h4>
                                         <p>Số lượng: {{item.number}}</p>
                                     </a>
-                                </li><!-- end message -->                               
+                                </li><!-- end message -->
                             </ul>
                         </li>
                         <li class="footer" ng-click="checkoutcart()"><a href="#">Thanh toán, quản lý giỏ hàng</a></li>
                     </ul>
                 </li>
 
-                <!-- User Account: style can be found in dropdown.less -->
-                <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="../../content/dist/img/user2-160x160.jpg" class="user-image" alt="User Image" />
-                        <span class="hidden-xs">Alexander Pierce</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <!-- User image -->
-                        <li class="user-header">
-                            <img src="../../content/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
-                            <p>
-                                Alexander Pierce - Web Developer
-                                <small>Member since Nov. 2012</small>
-                            </p>
+                @if (Request.IsAuthenticated)
+                {
+                     <!-- User Account: style can be found in dropdown.less -->
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img src="@user.avatar" class="user-image" alt="User Image" />
+                            <span class="hidden-xs">@user.HoTen</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- User image -->
+                            <li class="user-header">
+                                <img src="@user.avatar" class="img-circle" alt="User Image" />
+                                <p>
+                                    @user.HoTen
+                                    <span>@user.UserName</span>
+                                </p>
+                            </li>
+                            <!-- Menu Body -->
+                            <li class="user-body">
+                                <div class="col-xs-12 text-center">
+                                    <a href="#" class="btn btn-default btn-flat">Lịch sử mua hàng</a>
+                                </div>                                
+                            </li>
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                                <div class="pull-left">
+                                    <a href="#" class="btn btn-default btn-flat">Tài khoản</a>
+                                </div>
+                                <div class="pull-right">
+                                    @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                                    {
+                                        @Html.AntiForgeryToken()
+                                        <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Đăng xuất</a>
+                                    }
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+
+                }
+                else
+                {
+                    <ul class="nav navbar-top-links navbar-right">
+                        <!-- Account -->
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-user">
+                                <li>
+                                    <a href="/Account/Login"><i class="fa fa-user fa-fw"></i>Đăng nhập</a>
+                                </li>
+                                <li>
+                                    <a href="#"><i class="fa fa-gear fa-fw"></i>Giúp đỡ</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="/Account/Register"><i class="fa fa-sign-out fa-fw"></i>Đăng ký</a>
+                                </li>
+                            </ul>
+                            <!-- /.dropdown-user -->
                         </li>
-                        <!-- Menu Body -->
-                        <li class="user-body">
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Followers</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Sales</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Friends</a>
-                            </div>
-                        </li>
-                        <!-- Menu Footer-->
-                        <li class="user-footer">
-                            <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
-                            </div>
-                            <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                            </div>
-                        </li>
+
+                        <!-- /.dropdown -->
                     </ul>
-                </li>
+                }
             </ul>
         </div>
     </nav>
 </header>
 <script src="~/scripts/my_js/cart_controller.js"></script>
+
+
