--- a/doma/Views/Cart/xacnhan.cshtml
+++ b/doma/Views/Cart/xacnhan.cshtml
@@ -1,7 +1,92 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
+@model doma.Models.ThongTinNguoiDungMuaHang
 @{
-    ViewBag.Title = "xacnhan";
+    ViewBag.Title = "Xác nhận đơn hàng";
+
+    doma.Models.ProjectDMEntities db = new doma.Models.ProjectDMEntities();
+    string userid = User.Identity.GetUserId();
+    doma.Models.AspNetUser user = db.AspNetUsers.SingleOrDefault(t => t.Id == userid);
 }
+<script src="~/scripts/my_js/cart_xacnhan_controller.js"></script>
 
-<h2>xacnhan</h2>
+<div class="row">
+    <div class="box box-info" ng-controller="cart_xacnhan_controller" ng-init="init('@Model.DiaChiGiao', '@Model.SoDienThoai', '@Model.ThoiGianGiao')">
+        <div class="box-header">
+            <h3>
+                Xác nhận nhận mua hàng
+            </h3>
+        </div>
 
+        <div class="box-body">
+         
+                <h4>Thông tin người nhận</h4>
+
+                <div class="col-lg-10 col-lg-offset-2">
+                    <div class="col-lg-3"><span>Người nhận: </span></div>
+                    <div class="col-lg-9"><strong>@user.HoTen</strong></div>
+
+
+                    <br />
+
+                    <div class="col-lg-3"><span>Số điện thoại: </span></div>
+                    <div class="col-lg-9"><strong>@Model.SoDienThoai</strong></div>
+
+
+                    <br />
+
+                    <div class="col-lg-3"><span>Địa chỉ giao hàng: </span></div>
+                    <div class="col-lg-9"><strong>@Model.DiaChiGiao</strong></div>
+
+
+                    <br />
+
+                    <div class="col-lg-3">Thời gian giao hàng: </div>
+                    <div class="col-lg-9"><span>@Model.ThoiGianGiao </span></div>
+                    <br />
+                </div>
+       
+
+
+   
+                <h4>Danh sách sản phẩm</h4>
+                <hr />
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <td>Tên</td>
+                            <td>Hình ảnh</td>
+                            <td>Đơn giá</td>
+                            <td>Số lượng</td>
+                            <td>Thành tiền</td>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr ng-repeat="product in products track by product.id">
+                            <td>{{product.name}}</td>
+                            <td><img ng-src="{{product.imgs[0].link}}" style="  width: 50px;" /></td>
+                            <td>{{product.price | number}} VNĐ</td>
+                            <td>{{product.number | number}}</td>
+                            <td style="color:red;">{{product.number * product.price | number}} VNĐ</td>
+                        </tr>
+                    </tbody>
+
+                    <tfoot>
+                        <tr>
+                            <td colspan="3"></td>
+                            <td>Tổng tiền</td>
+                            <td style="color:red;">{{totalamount | number}} VNĐ</td>
+
+                        </tr>
+                    </tfoot>
+                </table>
+  
+       
+
+        </div>
+        <div class="box-footer clearfix">
+            <button style="float:right;" class="btn btn-success" ng-click="xacnhan()">Mua hàng</button>
+            <button style="float:left;" class="btn btn-warning" ng-click="back()">Trở lại</button>
+        </div>
+    </div>
+</div>
