--- a/doma/Views/Cart/Index.cshtml
+++ b/doma/Views/Cart/Index.cshtml
@@ -1,18 +1,20 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Giỏ hàng";
 }
 <script src="~/scripts/my_js/cart_index_controller.js"></script>
 
 <div class="row">
     <div class="box box-info" ng-controller="cart_index_controller" ng-init="init()">
-        <div class="box-header">Giỏ hàng của bạn</div>
+        <div class="box-header">
+            <h3>
+                Giỏ hàng của bạn
+            </h3>
+        </div>
 
         <div class="box-body">
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <td>#</td>
                         <td>Tên</td>
                         <td>Hình ảnh</td>
                         <td>Đơn giá</td>
@@ -24,12 +26,11 @@
 
                 <tbody>
                     <tr ng-repeat="product in products track by product.id" style="cursor:pointer;" ng-click="chooseproduct(product.id)">
-                        <td>{{product.id}}</td>
                         <td>{{product.name}}</td>
                         <td><img ng-src="{{product.imgs[0].link}}" style="  width: 50px;" /></td>
                         <td>{{product.price | number}} VNĐ</td>
                         <td>{{product.number | number}}</td>
-                        <td>{{product.number * product.price | number}} VNĐ</td>
+                        <td style="color:red;">{{product.number * product.price | number}} VNĐ</td>
                         <td><button class="btn btn-warning" ng-click="deleteproduct(product.id)">Xóa</button></td>
                     </tr>
                 </tbody>
@@ -38,7 +39,7 @@
                     <tr>
                         <td colspan="4"></td>
                         <td>Tổng tiền</td>
-                        <td>{{totalamount | number}} VNĐ</td>
+                        <td style="color:red;">{{totalamount | number}} VNĐ</td>
                         <td></td>
                     </tr>
                 </tfoot>
