--- a/doma/Views/Shared/_header_menu.cshtml
+++ b/doma/Views/Shared/_header_menu.cshtml
@@ -13,7 +13,7 @@
     <a href="../../Home" class="logo"><b>Admin</b>LTE</a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
-        
+
 
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
@@ -65,9 +65,34 @@
                             <!-- Menu Body -->
                             <li class="user-body">
                                 <div class="col-xs-12 text-center">
-                                    <a href="#" class="btn btn-default btn-flat">Lịch sử mua hàng</a>
-                                </div>                                
+                                    <a href="../../cart/history" class="btn btn-default btn-flat">Lịch sử mua hàng</a>
+                                </div>
                             </li>
+
+                            
+                            @if (User.IsInRole("Admin"))
+                            {
+                                <li class="user-body">
+                                <div class="col-xs-12 text-center">
+                                    <a href="../../admin" class="btn btn-default btn-flat">Quản lý</a>
+                                </div>
+                            </li>
+                                
+                                <!-- Menu Footer-->
+                                <li class="user-footer">
+                                    <p>Chức năng cho Admin</p>
+                                    <div class="pull-left">
+                                        <a href="#" class="btn btn-default btn-flat">Đơn hàng</a>
+                                    </div>
+                                    <div class="pull-right">
+                                        <a href="#" class="btn btn-default btn-flat">Sản phẩm</a>
+                                    </div>
+                                    <div class="pull-right">
+                                        <a href="#" class="btn btn-default btn-flat">Bài viết</a>
+                                    </div>
+                                </li>
+                                <hr />
+                            }
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
@@ -76,8 +101,8 @@
                                 <div class="pull-right">
                                     @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
                                     {
-                                        @Html.AntiForgeryToken()
-                                        <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Đăng xuất</a>
+                                    @Html.AntiForgeryToken()
+                                    <a href="javascript:document.getElementById('logoutForm').submit()" class="btn btn-default btn-flat">Đăng xuất</a>
                                     }
                                 </div>
                             </li>
