--- a/doma/Views/Home/Index.cshtml
+++ b/doma/Views/Home/Index.cshtml
@@ -104,9 +104,7 @@
     <h2>
         Sản phẩm
     </h2>
-
     <hr />
-
     <div class="col-md-3" ng-repeat="product in products">
         <div class="box box-img">
             <div class="box-body">
@@ -115,7 +113,25 @@
             <div class="box-footer" style="text-align:center;">
                 <p>{{product.name}}</p>
                 <p>{{product.price}}</p>
-                <button class="btn btn-info" ng-click="themgiohang(product.id)"><i class="fa fa-cart-arrow-down"></i> Thêm vào giỏ hảng</button>
+                <button class="btn btn-info" ng-click="xemsanpham(product.id)"><i class="fa fa-cart-arrow-down"></i> Thêm vào giỏ hảng</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
+    <h2>
+        Bộ sản phẩm
+    </h2>
+    <hr />
+    <div class="col-md-3" ng-repeat="product in groupproducts">
+        <div class="box box-img">
+            <div class="box-body">
+                <img ng-src="{{product.img}}" class="img-box" />
+            </div>
+            <div class="box-footer" style="text-align:center;">
+                <p>{{product.name}}</p>
+                <p>{{product.price}}</p>
+                <button class="btn btn-info" ng-click="xembosanpham(product.id)"><i class="fa fa-cart-arrow-down"></i> Thêm vào giỏ hảng</button>
             </div>
         </div>
     </div>
